--- a/main.css
+++ b/main.css
@@ -16,7 +16,7 @@
     z-index: 100;
 }
 .logo {
-    font-size: 2.5em;
+    font-size: 3.2vmax;
     font-family: 'Press Start 2P', cursive;
     font-weight: bolder;
     font-style: italic;
